# Long-Term-Memory-Agent

./: .env.example  README.md  pyproject.toml
src/memory_agent/: __init__.py  agent.py  config.py  consolidation.py  embeddings.py  main.py
src/memory_agent/memory/: __init__.py  episodic.py  procedural.py  semantic.py  working.py
src/memory_agent/storage/: __init__.py  sqlite_store.py
tests/: test_embeddings.py  test_storage.py  test_working_memory.py
